css/main.css
:root {
  --background: #e9e9e9;
  --primary: #f5f5f5;
  --secondary: white;
  --text: #787878;
  --accent: #10c9c3;
}

* {
  margin: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
  scroll-behavior: smooth;
}
body {
  position: relative;
}
ul {
  padding: 0;
}

header {
  position: absolute;
  top: 0;
  opacity: 100%;
  padding: 2rem 8rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}
nav > ul {
  display: flex;
  gap: 24px;
}
nav > ul > li {
  list-style-type: none;
  font-weight: 600;
  font-size: 0.75rem;
  letter-spacing: 1px;
}
a {
  text-decoration: none;
  color: black;
}
nav > ul > li:first-child > a {
  color: var(--accent);
}
.sub-heading {
  color: var(--text);
  font-size: 1.125rem;
  line-height: 1.75rem;
  font-family: "Nunito Sans", sans-serif;
}
.sub-heading-center {
  width: 50%;
  text-align: center;
}

#hero {
  background-image: url(../img/hero-bg.jpg);
  background-size: 80%;
  background-position: left bottom;
  background-repeat: no-repeat;
  height: 95vh;
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
}
.hero-wrapper {
  background-image: linear-gradient(#d4dde0, #b0b9be);
}
#description {
  width: 35%;
  padding-right: 8rem;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

h1 {
  font-size: 2.375rem;
}
#contact {
  padding: 1.2rem 2.5rem;
  color: white;
  background-color: var(--accent);
  border: none;
  font-size: 0.75rem;
  cursor: pointer;
  font-weight: 600;
  letter-spacing: 1px;
}
.placeholder {
  height: 50px;
  width: 50px;
  background-color: red;
  color: white;
}
#about {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 2rem;
  padding: 6rem 8rem;
}
h2 {
  font-size: 1.875rem;
}
h4 {
  font-size: 1.125rem;
  font-weight: 600;
}
#work {
  padding: 0;
  display: flex;
  flex-direction: row;
  align-items: center;
}
#work-wrapper {
  padding: 8rem;
  width: 50%;
  height: 100%;
  background-color: var(--primary);
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.progress-bar-with-title {
  padding: 1.5rem 0;
}
#work-photo {
  align-self: stretch;
  background-image: url(https://picsum.photos/1920/1080);
  width: 50%;
}

.progress-bar {
  width: 100%;
  height: 0.25rem;
  background-color: var(--background);
  margin-top: 1rem;
}
#ui-progress {
  width: 75%;
  height: inherit;
  background-color: var(--accent);
}
#webdev-progress {
  width: 90%;
  height: inherit;
  background-color: var(--accent);
}
#marketing-progress {
  width: 65%;
  height: inherit;
  background-color: var(--accent);
}
#statistics {
  padding: 8rem;
  background-color: var(--accent);
  display: flex;
  align-items: center;
  gap: 2rem;
}
.statistic {
  display: flex;
  align-items: center;
  gap: 32px;
  width: 100%;
}
.statistic-details-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.statistic-details-wrapper > h4,
.statistic-details-wrapper > h5 {
  letter-spacing: 1px;
  color: #fff;
  font-weight: 600;
}
#showcase {
  display: flex;
  flex-wrap: wrap;
}
.picture {
  height: 40vh;
  background-image: url(https://picsum.photos/1920/1080);
  width: 25%;
}
.picture-hover-effect {
  width: 100%;
  height: 100%;
  background-color: #25252599;
  opacity: 0;
  transition: opacity 1.5s;
  display: flex;
  align-items: center;
  justify-content: center;
}
.picture-hover-effect:hover {
  opacity: 100;
  cursor: pointer;
}
#load-more-work {
  padding: 3.5rem;
  background-color: var(--primary);
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  color: var(--text);
  width: 100%;
}
#process {
  padding: 6rem 8rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  gap: 2rem;
  margin: 0;
}

.video-wrapper {
  position: relative;
  width: 100%;
  height: 70%;
}
video {
  background-color: var(--text);
  width: 100%;
  height: 100%;
}
#play-button {
  background-color: var(--accent);
  padding: 1rem;
  border-radius: 100px;
  color: white;
  width: 5rem;
  height: 5rem;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
}
.play-button > span {
  display: block;
}
h3 > span {
  margin-left: 1rem;
}
#services {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  text-align: center;
  width: 100%;
  padding: 3rem 8rem;
  gap: 16px;
  background-color: var(--primary);
}
.service {
  width: 20%;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
  margin-bottom: 2rem;
  margin-top: 2rem;
  font-family: "Nunito Sans", sans-serif;
}
.service > h4 {
  font-weight: 800;
}
.service > .placeholder {
  margin-bottom: 1rem;
}
#quotes {
  padding: 12rem 8rem 2rem 8rem;
  letter-spacing: 1px;
  background-color: var(--accent);
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 6rem;
}
#slides {
  display: flex;
  flex-direction: row;
  width: 100%;
  align-items: center;
  justify-content: center;
  gap: 0.5rem;
}
.slide {
  width: 0.375rem;
  height: 0.375rem;
  background-color: #dddddd;
  border-radius: 100%;
}
.active-slide {
  background-color: white;
  width: 0.625rem;
  height: 0.625rem;
}
.quote-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 64px;
  width: 100%;
}
.quote-wrapper > q {
  text-align: center;
  font-size: 1.25rem;
  width: 75%;
}
.quote-wrapper > p {
  font-size: 0.75rem;
}
#partners {
  padding: 4rem 12rem;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
#need-a-project {
  background-color: var(--primary);
  padding: 6rem 0;
  display: flex;
  justify-content: center;
}
.need-a-project-wrapper > p {
  margin-bottom: 1.5rem;
  text-align: center;
}
.need-a-project-wrapper > h2 {
  margin-bottom: 1.5rem;
}
.need-a-project-wrapper input[type="text"],
.need-a-project-wrapper textarea {
  background-color: var(--secondary);
  border: none;
  padding: 0.75rem;
  margin-bottom: 1.5rem;
}
.need-a-project-wrapper > form > input[type="text"],
.need-a-project-wrapper > form > textarea {
  width: 100%;
}
.first-row {
  width: 100%;
  display: flex;
  justify-content: space-between;
}
.first-row > input {
  width: 48%;
}
.need-a-project-wrapper {
  width: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.need-a-project-wrapper > form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
}
.need-a-project-wrapper > form > input[type="submit"] {
  border: none;
  background-color: #0dc9c6;
  color: white;
  padding: 1rem 2rem;
  font-size: 0.75rem;
}
footer {
  background-color: #141414;
  padding: 6rem 8rem;
  color: #bcbcbc;
  display: flex;
  justify-content: space-between;
}
.copyright-wrapper > h4 {
  color: white;
  margin-bottom: 2rem;
}
footer li {
  list-style-type: none;
}
footer a {
  color: #bcbcbc;
  font-family: "Nunito Sans", sans-serif;
}
footer p {
  font-family: "Nunito Sans", sans-serif;
}
.links {
  display: flex;
  gap: 5rem;
}
.icon {
  width: 40px;
  height: 40px;
  display: block;
}


@media (max-width: 768px){
  #hero {
    flex-direction: column;
    justify-content: center;
    width: 100%;
  }
  #description {
    text-align: center;
    width: 100%;
    padding: 0 2rem;
  } 
  #about {
    padding: 4rem 2rem;
  }
  .sub-heading-center {
    width: 100%;
  }
  #work {
    flex-direction: column;
    justify-content: center;
  }
  #work-photo {
    width: 100%;
    min-height: 420px;
  }
  #work-wrapper {
    width: 100%;
    padding: 4rem 2rem;
  }
  #statistics {
    padding: 4rem 4rem;
    flex-direction: column;
    justify-content: center;
  }
  .picture {
    width: 100%;
  }
  #process {
    padding: 4rem 2rem;
  }
  #services {
    padding: 2rem 2rem;
    flex-direction: column;
  }
  .service {
    width: 100%;
  }
  #quotes {
    padding: 4rem 2rem;
  }
  #partners {
    flex-direction: column;
    gap: 4rem;
  }
  #need-a-project {
    padding: 4rem 2rem;
  }
  .need-a-project-wrapper {
    width: 100%;
  }
  .need-a-project-wrapper > * {
    width: 100%;
  }
  .need-a-project-wrapper > h2 {
    text-align: center;
  }
  .first-row {
    flex-direction: column;
  }
  .first-row > input {
    width: 100%;
  }
  footer {
    flex-direction: column;
    gap: 2rem;
    padding: 4rem 2rem;
  }
}

